# orquestrator-agent

./: .gitignore  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VALIDATION_REPORT.md  MODIFIED_FILES_CHECKLIST.md  Makefile  README.md  README_VALIDACAO.md  RELATORIO_VALIDACAO.md  REVIEW_REPORT.md  START_HERE.md  TESTING_RECOMMENDATIONS.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_REPORT.md  TEST_RESULTS_SUMMARY.md  TEST_VALIDATION_REPORT.md  VALIDATION_EVIDENCE.md  VALIDATION_FILES.txt  VALIDATION_QUICK_SUMMARY.txt  VALIDATION_REPORT.md  VALIDATION_REPORTS_INDEX.md  VALIDATION_REPORT_FIX_CHAT_MODELS.md  VALIDATION_REPORT_GEMINI.md  VALIDATION_REPORT_GEMINI_KANBAN.md  VALIDATION_REPORT_INDEX.md  VALIDATION_REPORT_TOKEN_STATS.md  VALIDATION_ZENFLOW_RENAME.md  amanha.txt  index.html  package-lock.json  package.json  tarefas-amanha.txt  todo.txt  todos2.txt
backend/: .env.example  auth.db-wal  pyproject.toml  requirements.txt
backend/migrations/: 011_add_completed_column.sql  012_add_experts_to_cards.sql
backend/scripts/: migrate_databases.py
backend/src/: __init__.py  agent.py  agent_chat.py  config.py  database.py  database_manager.py  execution.py  gemini_agent.py  git_workspace.py  main.py
backend/src/config/: __init__.py  experts.py  pricing.py  settings.py
backend/src/migrations/: add_execution_cost.py  add_token_stats.py  migrate_all_databases.py
backend/src/models/: __init__.py  card.py  execution.py  metrics.py  user.py
backend/src/repositories/: card_repository.py  execution_repository.py  metrics_repository.py  orchestrator_repository.py
src/: App.tsx  (+1 more)
(+279 files in other folders)
